<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.mycompany.mathapp.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/choice"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btn_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/choice1"/>
        <Button
            android:id="@+id/btn_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/choice2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/choice3"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/choice4"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/choice5"
                android:layout_weight="1"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/choice6"/>
    </LinearLayout>



</RelativeLayout>
