<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <TextView
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:gravity="center"
        android:textSize="30dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:textColor="@color/red"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/chapter1"
               android:textSize="20dp"/>
           <TextView
               android:textColor="@color/red"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/chapter2"
               android:textSize="20dp"/>
           <TextView
               android:textColor="@color/red"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/chapter3"
               android:textSize="20dp"/>
           <TextView
               android:textColor="@color/red"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/chapter4"
               android:textSize="20dp"/>
       </LinearLayout>
    </RelativeLayout>


</LinearLayout>